# xindata_test

./: .flake8  README.md  freelancers.db  pyproject.toml
notebooks/: eda.py  enriched_freelancer_data.csv
src/xindata_test/: cli.py  constants.py  create_sqlite_view.py  data_loader.py  llm_engine.py  query_executor.py
