[project]
name = "xindata-test"
version = "0.1.0"
description = "CLI-система анализа данных о доходах фрилансеров"
authors = [
    {name = "Igor Fedorov",email = "cloud.hex@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "duckdb (>=1.3.0,<2.0.0)",
    "typer (>=0.15.4,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
]

[tool.poetry]
packages = [{include = "xindata_test", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.scripts]
freelance = "xindata_test.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
